0.62.3
------
1. Dont draw focus for combobox listviews.

0.62.2
------
1. Adjust KMenu titles.
2. Fixed (hopefully!) clipping of toolbutton text.
3. Fixed some more tab clipping (Qt4.5)
4. Draw KMenuTitle more button like - is more consistent with KDE3.

0.62.1
------
1. Use highlight colour for unselected focused view items.
2. Fix saving/reading of custom shades.
3. Reduce tab width by 4 pixels.
4. Fix clipping of toolbar text.
5. Fix group box check box clipping.

0.62.0
------
 1. Reduce gradient code complexity - makes predefined gradients
    work in the same vein as custom gradients.
 2. Add scrollbar/slider groove and 'sunken' appearance options.
 3. Added new soft and harsh gradients.
 4. Change defaults:
        Soft gradient
        Fade menuitems
        Don't use highlight for menu.
        Default highlight set to 3%
        Toolbar separators set to sunken
        Flat menubar appearance
        Button like check/radios
        Supply, and use, predefined custom shades
        Plain progress
        Don't highlight active tab
        Sunken scrollviews
        Sunken appearance set to soft
        Line focus
        Set custom appearances for titlebars
        Extra rounded (only applies to Gtk2 and KDE4 variants)
 5. Allow all bar flat and raised tabs to be coloured.
 6. Only save appearance settings if different from default.
 7. If a gradient does not define the values for positions 0 and 100, then add these.
 8. Better colouring of selected tab.
 9. Added new focus options - full and line.
10. Add new round options - extra and max.
11. Don't etch disabled items.
12. Use text colour for focus indicator in tree/list/etc views.
13. When specifying custom gradients, add the pssibility to have no
    internal border - options are now none, light, 3d
14. Only apply plastik style mouse-over scrollbars and sliders when
    plastik is set as the mouse-over style.
15. Only draw 1 arrow on combos - event when in Gtk style.